WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
305914
Address unsafe cast warnings in BidiRun.cpp & BidiRun.h
https://bugs.webkit.org/show_bug.cgi?id=305914
Summary
Address unsafe cast warnings in BidiRun.cpp & BidiRun.h
Chris Dumez
Reported
2026-01-21 01:50:35 PST
Address unsafe cast warnings in BidiRun.cpp & BidiRun.h.
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2026-01-21 01:52:27 PST
Pull request:
https://github.com/WebKit/WebKit/pull/56954
EWS
Comment 2
2026-01-21 21:56:37 PST
Committed
305991@main
(30a5956fe40f): <
https://commits.webkit.org/305991@main
> Reviewed commits have been landed. Closing PR #56954 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-01-21 21:57:13 PST
<
rdar://problem/168644681
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug