Address unsafe cast warnings in BidiRun.cpp & BidiRun.h https://bugs.webkit.org/show_bug.cgi?id=305914

Reviewed by Darin Adler.

Make BidiCharacterRun templated to avoid unsafe-looking static casts
in the BidiRun subclass.

* Source/WebCore/SaferCPPExpectations/MemoryUnsafeCastCheckerExpectations:
* Source/WebCore/platform/graphics/GraphicsContext.cpp:
(WebCore::GraphicsContext::drawBidiText):
* Source/WebCore/platform/text/BidiResolver.h:
(WebCore::BidiCharacterRun::next const):
(WebCore::BidiCharacterRun::takeNext):
(WebCore::BidiCharacterRun::setNext):
* Source/WebCore/rendering/BidiRun.cpp:
(WebCore::BidiRun::BidiRun):
(WebCore::BidiRun::takeNext): Deleted.
* Source/WebCore/rendering/BidiRun.h:
(WebCore::BidiRun::next): Deleted.

Canonical link: https://commits.webkit.org/305991@main